@@ -16,7 +16,6 @@ Install guide:
 * Install with `dpkg -i anste_0.9_all.deb` the debian package generated
 * Install the dependencies needed using `apt-get -f install`
 * Install [Selenium WebDriver](http://seleniumhq.org/docs/03_webdriver.html) for python. Our recomendation it's to use `pip install selenium`
-* Download [Selenium RC](http://seleniumhq.org/projects/remote-control/) and modify the configuration to search for it in the folder you have it.
 
 Additionally, you'll have to install the [Attempt CPAN Module](http://search.cpan.org/~markf/Attempt-1.01/lib/Attempt.pm). Use `cpan Attempt`
 We will remove this last dependency and integrate the module with the project properly.
