@@ -1,6 +1,5 @@
 [global]
 system = Debian
-#virtualizer = Xen
 virtualizer = Virt
 verbose = 1
 wait = 0
@@ -18,31 +17,20 @@ port = 8001
 [comm]
 iface = anste0
 first-address = 10.6.7.10
-#first-address = 192.168.45.220
 gateway = 10.6.7.1
-#gateway = 192.168.45.41
 nat-iface = br0
+nameserver-host = 192.168.100.254
+nameserver = 192.168.100.254
 
 [deploy]
 auto-create-images = 1
 
 [selenium]
-#rc-jar = /home/josh/selenium-rc/selenium-server.jar
-#browser = *firefox /home/josh/firefox/firefox-bin
-video = 0
-record-all = 1
-
-[xen-options]
-use-ide-devices = 0
-size = 800Mb
-memory = 512Mb
-fs = ext3
-image = full
-#kernel = /boot/vmlinuz-2.6.18-5-xen-686
-#initrd = /boot/initrd.img-2.6.18-5-xen-686
-#mirror = http://192.168.45.4/debian
-mirror = http://en.archive.ubuntu.com/ubuntu
+protocol = https
 
 [virt-options]
 size = 800
 memory = 512
+
+[vm-builder-options]
+mirror =  http://en.archive.ubuntu.com/ubuntu
