@@ -573,31 +573,6 @@ sub disableNAT # (iface, sourceAddr)
     throw ANSTE::Exceptions::NotImplemented();
 }
 
-# Method: executeSelenium
-#
-#   Override this method to execute Selenium.
-#
-# Parameters:
-#
-#   jar - String with the path of the selenium jar.
-#   browser - String with the web browser to be used.
-#   url - String with the url of the web we want to test.
-#   testFile - String with the filename of the Selenium test suite.
-#   resultFile - String with the filename of the Selenium results to be saved.
-#
-# Returns:
-#
-#   string - contains the command
-#
-# Exceptions:
-#
-#   throws <ANSTE::Exceptions::NotImplemented>
-#
-sub executeSelenium # (%params)
-{
-    throw ANSTE::Exceptions::NotImplemented();
-}
-
 # Method: startVideoRecording
 #
 #   Override this method to return the command that should
